Bug 1057921 - Don't propagate text decorations through outer <svg> elements. r=dholbert